2006-05-23  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/utils.c: check if file has been closed in
                utils_goto_workspace_tag


2006-05-22  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/callbacks.c, src/templates.c:
   insert the file type extension and fix a warning when inserting a
   fileheader in a new document


2006-05-22  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/keybindings.c, src/utils.c: improved toggle visibility of
                                   sidebar when toggled by keyboard


2006-05-21  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/keybindings.c: added menu_messagewindow and toggle_sidebar
                      shortcuts
 * src/highlighting.c, data/filetypes.c, data/filetypes.cpp:
   added option to disable styling within preprocessor directives
 * src/dialogs.c, src/about.c, src/callbacks.c, configure.in:
   rewrote about dialog to reduce code size, added subversion revision
 * src/vte.c: declared some functions static
 * src/dialogs.c: do not create VTE settings in the preferences dialog
                  if VTE is disabled at runtime
 * geany.glade, src/interface.c, src/callbacks.c, src/keyfile.c,
   src/main.c, src/prefs.c:
   added option to disable load of VTE at startup
 * src/highlighting.c, src/utils.c: applied sanity check patch from
                                    Pierre(posted on mailing list)


2006-05-20  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/dialogs.c: fix pressing enter to open more than one file in
                  the open file dialog
 * src/sci_cb.c: fix a segfault when commenting out lines with ctrl-d
                 when no filetype is set
 * src/utils.c: fix a segfault clicking on a compile error if the
                compiled file has been closed


2006-05-19  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/sci_cb.c: fix a small bug in sci_cb_show_calltip() to prevent an
                 endless loop