@@ -2,6 +2,9 @@
 
  * src/utils.c: check if file has been closed in
                 utils_goto_workspace_tag
+ * src/interface.c, src/callbacks.c, src/callbacks.h, geany.glade:
+   created Search menubar item with Find items from Edit menu, added
+   Find Previous and Go to line commands.
 
 
 2006-05-22  Nick Treleaven  <nick.treleaven@btinternet.com>
